--- a/client/src/components/calendarIngreso/CalendarStyles.css
+++ b/client/src/components/calendarIngreso/CalendarStyles.css
@@ -10,3 +10,67 @@
     padding: 5px;
     opacity: 0.8;
 }
+
+
+.form-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+   }
+
+   
+.form-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+    width: 400px;
+    max-width: 90%;
+   }
+
+   .form-content label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: bold;
+   }
+   
+   .form-content input[type="text"],
+   .form-content input[type="email"],
+   .form-content textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 20px;
+   }
+   
+   .form-content button {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+   }
+   
+   .form-content button:hover {
+    background-color: #0056b3;
+   }
+
+   .cancel-button,
+.submit-button {
+ display: inline-block;
+ margin-right: 10px;
+}
+
+.cancel-button {
+ background-color: red;
+ color: white;
+}
