Select para el tipo de examen en el formulario

--- a/client/src/components/CalendarIngresoHoras/CalendarStyles.css
+++ b/client/src/components/CalendarIngresoHoras/CalendarStyles.css
@@ -50,6 +50,12 @@
     margin-bottom: 20px;
 }
 
+.form-content select {
+    padding: 10px;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
 .form-content button {
     padding: 8px 24px;
 }
